# ChangeLog for dev-python/jsonpointer
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonpointer/ChangeLog,v 1.5 2014/10/04 05:38:29 idella4 Exp $

  04 Oct 2014; Ian Delaney <idella4@gentoo.org> jsonpointer-1.4.ebuild:
  drop py2.6 add pypy support

*jsonpointer-1.4 (14 Jul 2014)

  14 Jul 2014; Patrick Lauer <patrick@gentoo.org> +jsonpointer-1.4.ebuild:
  Bump

*jsonpointer-1.3 (03 Apr 2014)

  03 Apr 2014; Tim Harder <radhermit@gentoo.org> +jsonpointer-1.3.ebuild,
  metadata.xml:
  Version bump, run tests, update PYTHON_COMPAT, and add upstream info to
  metadata.

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> jsonpointer-0.7.ebuild:
  Keyword amd64-linux and x86-linux

*jsonpointer-0.7 (17 Jan 2013)

  17 Jan 2013; Matthew Thode <prometheanfire@gentoo.org>
  +jsonpointer-0.7.ebuild, +metadata.xml:
  adding ebuild so I can eventually get python-glaceclient in tree