@@ -1,18 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST jsonpointer-0.7.tar.gz 3343 SHA256 790255717b982aa9cb837030d4ad4d19447322ff7b8fb4bf8bb340cadc0a42a4 SHA512 900c7341598d3fef4667bf65d4afac8788e9449b45b7799e8cda1406ab703e790431a69f4387f09ace73456c089f179a93d32293a973ff1023aed0dcfe9740b3 WHIRLPOOL 4e618c55bdb52c7f44271e55768aa46a7e04c686695e5829d8a0a0c01d7334b3a0929f4994564548af238352dec49c9e99f3094828aec17f777c518c03c40958
-DIST jsonpointer-1.3.tar.gz 6829 SHA256 0c60fd449265c301af8492a654e8cb379aeec5f6207ecac9a585fa91e6ccf95c SHA512 9961e29b5a9b3153c0ed97d6da68b86aa2d1f8333e0ff2a8a2accce994276c83ecaead2729100bcdd655ad2120d9d3502422ab365837e93473cc1de5a31e4e7b WHIRLPOOL 3416f4307bedefbcc0e0ef4da6bf0c7eccb9a6d5a0029066d03a6790e83623cfdfffdf80962f256465820578d26a42dd47fa91749fb7a2342ceee43bbce49e55
-DIST jsonpointer-1.4.tar.gz 6936 SHA256 cb9d357edc67fe41a929fbfd583e95a2a6c5fdc71e22522d88ab715c752905b4 SHA512 be1cf5b5df08bd42c25bded242afd4caf04baba8958cc8599859f80041f8db06e4d6aaadadd6cc6f35b2cc78a77a9d94ac45a9c809c21c61a691d7a6d9b5184f WHIRLPOOL 2441143f7c19d54bfb395dc829439ebfdfa0d0331fd9430e6d2e7463a6aa857ee59426424e3d7511169a85be95f32816d7e8c3987aa16e158b08ce05e60cfbb6
-EBUILD jsonpointer-0.7.ebuild 633 SHA256 a5324d7cfecc726b982bc2d4a74fe56758c64d39d4b4b050d5456ed012fbcd96 SHA512 151994e6f165197d37a73ab9a6b65056fde9130c5fe6d012c6e98186aeed300ee13943506410948d8a4e88af8d2db98e00e1cc88b8a26466c4b2e92da5f9eb42 WHIRLPOOL 662df5431c3f8895ab16e7d2b21107934eced01eabde044bb9c33257586c20d0571da2383cc0f15a58b1a585df4499ccc5b9a0f3000562fb227be43a6619019a
-EBUILD jsonpointer-1.3.ebuild 761 SHA256 3b4dfd25c800430295daaa1e1545c8afdf406a8dfebaf65d6f409fa81cf9a413 SHA512 499c4c79f6fe28e650c43a7cc4d3d2f4c5153361e0f8924562d469684ace261fa604152f9c63b83e6827715b154c1462fb1f87699a9d227aa61690cdd7d72b78 WHIRLPOOL 3da592b69eadc4075cfe8705e1a16842c633a1e66a3acd1349020ce4839c83994091e4a4620e36cea00d8c0aec0c668b66edd9ac058156462f0c6312e931474b
-EBUILD jsonpointer-1.4.ebuild 760 SHA256 aff5fbea8454270ffe1331d98725aba48e9d0d6673d293618720a3cf72bef2a9 SHA512 1d796fac3e0fb85615e91df8d5040bb7336477441876c28f8c94c2f39a81df50bbee289e721fea8d7a9ae04054e48e9a72cc59cf2906537fa05d4408ca68704e WHIRLPOOL aea131a67c1d4fb71ec61ebdcc53aeea547ff12a28ed6e8ca0ed13c0cc5d7191b67141f4f02caae45982ea66d9373aca070e6e9b72d8fc93d965e07d291d72d0
-MISC ChangeLog 959 SHA256 b048ce046180d0da75c05a44f5dd0aec8f94ea4aef2b749b78fa59f8549c45f7 SHA512 a8b2e24268d753a005fc4e7517dad52c9a6fada5c6aa27357bc2f41df0699cbf12b90d999087bef4b6a122e69a293b9a466602e3cf71ee251ca704aa4ca7b595 WHIRLPOOL f55f818c573693614a5c775f0ad6f59e59d1b7495cf99f1fbb3070fbc377892b277f332e0a98feffbc81185377d61f5e50830ddc4c6edb85829830a0474c81ab
+DIST jsonpointer-1.5.tar.gz 8221 SHA256 8f26c526cd6a8f211d68abb77ce4bfaf73d3ba17953e1c1164c10a4a2de09d68 SHA512 1b2e74770d98ab051858dab3ec0c1b81389bb6d406f54f4b7baa1fb99888d0e8ef5d5351cbc88c117603cab7b0755a607c99940320bd77a346cb273ed9202c1b WHIRLPOOL 4e898fd0158ada58d6ffc8594cda352a9e283e37ff49c5601baf1a6643ade933b7dc14363dc957a85313e9c3ad1f4a9d725196ac30893d85a54d0c1874212a19
+EBUILD jsonpointer-1.5.ebuild 756 SHA256 3b05d74e04bb573220cf6af5878d3196471c446443266b6f449adecb59c06859 SHA512 8bec2c88425a51cbae0ad6f9f024d26dd14ee1b07c07296e74bb0a771c746d4dc099907c2bd182318adc99b5c89d356ca46ff8b49762de0f56a8a32d985fd317 WHIRLPOOL 513f0f1c074c9c548f9ae28e1049229c9d497dd63cb0cc49f93a0a81ae821eeaf6525d4e3adb6ce4b65a1e80c81ef3c0a6b40592eac410766d82d924788f0b2b
+MISC ChangeLog 1174 SHA256 d9c4b75feba86d6898556d9239acee07ca163f22234fdfd81f2932d55e843f08 SHA512 61a12ecf62bf05604a51154ea6338c615d0278d5e889c0b279976e8c78af5861c979354c1ecdd56336d9ab9ce3d4f1d2e53eb3a4bd663e10360f99ab720426d5 WHIRLPOOL 333159e50b31c95527a393cd6823afeb4c5261bc464e949fc64e1c1330191edfab9f18889dc5945df6a443608c6ecc6b30d559b692244824d7407aa8a2c3b69b
 MISC metadata.xml 531 SHA256 4bf54850a89aba0e1121f018326f029f8cfc07486549fda490622b3a8b716dd2 SHA512 a375b576c6b441a53a29b12925ec5b00d3b8111d123f0d398b9d4d05b597ce2ee91cf373d44cb3415c8f6f1e373d1ba365db13e35f8c54a41eed15625652198d WHIRLPOOL d01e04a016b30b405b2c151669c50915e0caf9c5c74379b6840030adbc13dff48d38f08b2a60ef1c4bb603918f301cdafb600708fc1ca0dc821202201a991419
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlQvh+UACgkQso7CE7gHKw2JuQCcDEhxfbmOQu2a0McyGnFT0TSh
-ZvoAoOCCEqnJ8rDF8d1DrvcgYpI0iWid
-=so/4
+iEYEAREIAAYFAlRq7HQACgkQso7CE7gHKw07iwCfSXEhhZ4EMGKWlwBRNHAxVZEZ
+sTMAn3WBQSHxmOhm2QiTM6LGaxOKWI7x
+=XSHv
 -----END PGP SIGNATURE-----
