@@ -1,20 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonpointer/jsonpointer-0.7.ebuild,v 1.2 2014/03/19 18:19:31 bicatali Exp $
-
-EAPI=5
-PYTHON_COMPAT=( python2_6 python2_7 )
-
-inherit distutils-r1
-
-DESCRIPTION="Identify specific nodes in a JSON document (according to draft 08)"
-HOMEPAGE="https://github.com/stefankoegl/python-json-pointer"
-SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
-IUSE=""
-
-DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
-RDEPEND=""
