@@ -1,9 +1,9 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonpointer/jsonpointer-1.4.ebuild,v 1.2 2014/10/04 05:38:29 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonpointer/jsonpointer-1.5.ebuild,v 1.1 2014/11/18 06:51:15 idella4 Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} pypy )
+PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy )
 
 inherit distutils-r1
 
