@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst prepare
+DEPEND=sys-libs/zlib app-arch/bzip2
+DESCRIPTION=RF Signal Propagation, Loss, And Terrain analysis tool for the spectrum between 20 MHz and 20 GHz
+EAPI=5
+HOMEPAGE=http://www.qsl.net/kd2bd/splat.html
+IUSE=doc linguas_es
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=sys-libs/zlib app-arch/bzip2
+SLOT=0
+SRC_URI=http://www.qsl.net/kd2bd/splat-1.4.1.tar.bz2
+_eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=e35ac4cf791134926de0a3cbdd202cda
