@@ -5,15 +5,21 @@ AUX splat-1.2.2-gcc43.patch 205 SHA256 d92a15175d7caf1f42fc821ae27dbe11d7d4d9f76
 DIST splat-1.2.2.tar.bz2 301939 SHA256 1716a2db1ff57d482009cc74534c6a96a4ea9fa6713ad59f27675445a6513b2e
 DIST splat-1.3.0.tar.bz2 328074 SHA256 5075ced59c23155242332cceb6d04dce45bc092cc590f9ebfa47dce72900bd60
 DIST splat-1.4.0.tar.bz2 357433 SHA256 f081951c68577234668ac2a1e6eff86e60e57e17c470d765900e9d1461058678
+DIST splat-1.4.1.tar.bz2 359165 SHA256 28b241fd393a3d14283712e0355f34d5c9faaf957c65ab03c0c979ce2c61b118 SHA512 87a9bce186579d218fc247119d96ed45c776b7782f1156d55e459617c7181ba67a0c5d7169d114c0dd0c4093d19c72080552c94b9b38fa82e53c487b90a8ea78 WHIRLPOOL 1b7bd4b52de9dc571cc9af7059259a744a8ce93f5f4e6eedb296dbd9dc2e960162d0611d0afd69755568510c83d0c9098d78b65ef82ee67b157751322aacfe05
 EBUILD splat-1.2.2-r2.ebuild 1901 SHA256 dd1fc07b7a8b71c7c77e238c69f65683ad9bb649591166a975e9912aae3f6dda SHA512 3b6268f00a869d6927275351f4a8984ea4a9cf4f9de516b1ccbedee0f198d2c7b741c6fac0cbf283549bfc8c7f5bc92df2f46b3ea41a46f203da76f22617b828 WHIRLPOOL bd1c0fccb6882421eda4b558d7c7e9df6fb72faa4e205bed582022fd66d9bbf8fb7d5a35b60b8f20ce6a55e3a66e09a499a52cb1001399236c991a225a813ec0
 EBUILD splat-1.3.0.ebuild 2145 SHA256 a60c017523e05ed28d6ba7128c8658eefadacc570f9ee0563d11c1a339db7a88 SHA512 d53e429efe0977f2316459da7b7f196a0abf516a599440c82ea3413620f5f54e26a0486bb9fb38aaf43cb7e474036ee8cc199e4abf28ab6db99fbffb9f1e7aab WHIRLPOOL 14f5ca21ec15aa6882dcfc8a04c8561ae7c310fa3daaf51e765cbc85d0fe463d457cb7ba12d327841e8fd754cc18f15be6d7fe65e0cf9e61994236a9cbc6f95b
 EBUILD splat-1.4.0.ebuild 2150 SHA256 702f490c1e58cfe4ec0f184d5cfdc5b789c9d228ceedd9d7677576960800cff9 SHA512 16f6f6e45657976860248538ab241c4a7b5e224760729c70b987dcad1d3a190f5ec1cf8b117d207e3f2b71e8cdb4d52d16af48436fa062d38c69cbb90182b274 WHIRLPOOL 3b72e9fe2be0f5a027387b5146176b1b10180711aa9f8d45365cc5e7d25ad67563690462061a5c359757c08ac931f6fd20127b5d8bf8fc00d9daa1e187673279
-MISC ChangeLog 2110 SHA256 459c3a4b2690a31e9c0ff43adac127ea4872a5d5f1b22e13586d51cd1e27c240 SHA512 d873b5faa556f9ce1c7616677eecdde8f0386f125743cac7c1d67fce07db184004d8eb40d1db6f569a5723397decf6cee0ea4e772e39bb6e2bcfa8e2fb86c135 WHIRLPOOL 5b7d76ce2ede3294e0c3eee876513e3fbf632b365564932c9a81e029f3f2c4296d970d759dd133b618efacb2bd1d1b8930dc8fd92a149b453390974f3edb51aa
+EBUILD splat-1.4.1.ebuild 2132 SHA256 c319cef92240879653c63f8f901a4dc3c1ec181db1e7d51527e670a6f170aae8 SHA512 0107f24c7d18047639f50cc293ef09254a3b852c631c3995ce46e3c4ff2d580d18bd9ab6d1b6ca2ed70d0762b0b61ddc441bb2a16833120f58dd3ddab08b7cf9 WHIRLPOOL c721c44ebedf2dba1aaefa265d05cd73ca093753c813ababfbc7fcdff0d7e78d8bee71446cddd8c6cafffa03d1e918ef310a4045c65e0d0f2566070455e9e001
+MISC ChangeLog 2218 SHA256 60e6bb4dd35ae73476c577fc8a259355cb60d4b95f67964b97a2d66026d86f2a SHA512 97ba09ece50f779768e766b30c645c1b8115bf71af82d8303b21653c213512e93c4ba8e4d5e83a1291e9926747edcb1f3622dfa3421b0242fd4a4621bf3f62bb WHIRLPOOL 44e7e7e9a3279a5623c2b056a656d8b2f8b98016c392f575fff2587d19f7e05b62b089e0f11d50dedd9d8a49e6ebc5a0817f82f3a016b92d1e0bafefe35bfa08
 MISC metadata.xml 541 SHA256 4eda2e972391147ad0078ba0b9fc72171e8de550b05c70a244f9443d1a83982a SHA512 0469e1814ab4d37b120e8f81a52bcea1df923118cc42e99839f54aceb2674f17508a4a9fe12505b09e60e1193c53102881c8c042e5620f8e7a290a5eb5c776bc WHIRLPOOL 543fb27ee9a8f6ee71e5c3f4ac16b193400cd694d3547deb0ce9faf6af568f7ca7eee0f0f14e2136fcba1e57806f45a0eca77bb7a439b63ccf988429351d08f3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn1fsACgkQcaHudmEf86ovWwCfXfu2JAELwFPj1SgKNcoAACRV
-KpUAn0q6zWtcOjZrXhwhYUflkf0plAva
-=Ayot
+iQEcBAEBCAAGBQJUauviAAoJEO1RxJ84ipLkOdYIALtdsq+a6F+RSBB2CHEQiuzu
+BUFLe27sn9o3Aa9NR/pJw7q9zfHtjSoEdm8OgGFC2yULDyIgAQS2hp3DelLTn/dQ
+mg/CSUh5eqIBIGzxeQFjOSaD7Okhu4WeQn9pLME8enL3vXXSeWLIHxHePqcmeYuh
+jl6w+hh/bmh8Qqz7M9kOzqRIJiG7u6BEwQPUkcHk3klXashZUCMMXwZxEdAbN7wS
+scT6A6MAUyE1dgl2zTdjpCyXE0S1bQLY0N09EyhnVbHinNQxLnoJFijRW7ZX5a0l
+VnWuYV//WBJvc4f5inv+eQvdYD41Tj8PpMRSszZ0WVg9aeXRbQXTnbMPacfkm4o=
+=8+Vz
 -----END PGP SIGNATURE-----
