@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/jsonpointer
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonpointer/ChangeLog,v 1.5 2014/10/04 05:38:29 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonpointer/ChangeLog,v 1.6 2014/11/18 06:51:15 idella4 Exp $
+
+*jsonpointer-1.5 (18 Nov 2014)
+
+  18 Nov 2014; Ian Delaney <idella4@gentoo.org> +jsonpointer-1.5.ebuild,
+  -jsonpointer-0.7.ebuild, -jsonpointer-1.3.ebuild, -jsonpointer-1.4.ebuild:
+  bump, clean old impl., rm old
 
   04 Oct 2014; Ian Delaney <idella4@gentoo.org> jsonpointer-1.4.ebuild:
   drop py2.6 add pypy support
